syntax = "proto3";

package rdo.transport;

option go_package = "prototype/.;prototype";

message UTxO{
  uint64 blockNum = 1;
  bytes hash = 2;
  uint32 index = 3;
  bytes from = 4;
  bytes to = 5;
  bytes node = 6;
  uint64 amount = 7;
  uint64 timestamp = 8;
  uint32 txtype = 9;
}